--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,14 @@ add_library (vsag SHARED ${CPP_SRCS})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Ofast")
 
-# add_compile_options(-mavx512f)
-# add_compile_options(-mavx512dq)
-# add_compile_options(-mavx512bw)
-# add_compile_options(-mavx512vl)
-# add_compile_options(-mavx)
-# add_compile_options(-msse)
+if(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(x86_64)|(AMD64|amd64)|(^i.86$)")
+    add_compile_options(-mavx512f)
+    add_compile_options(-mavx512dq)
+    add_compile_options(-mavx512bw)
+    add_compile_options(-mavx512vl)
+    add_compile_options(-mavx)
+    add_compile_options(-msse)
+endif()
 
 add_executable (example_test examples/cpp/example_test.cpp)
 target_link_libraries (example_test vsag)
