--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(extern/hnswlib)
 include_directories(extern/json/single_include)
-
+include_directories(extern/faiss)
 include_directories(include)
 
 file (GLOB CPP_SRCS "src/*.cpp")
@@ -28,9 +28,13 @@ endif()
 add_executable (example_hnsw examples/cpp/example_hnsw.cpp)
 target_link_libraries (example_hnsw vsag)
 
+
+add_executable (example_kmeans examples/cpp/example_kmeans.cpp src/Clustering.cpp)
+target_link_libraries (example_kmeans vsag)
+
 add_executable (bench_random1m benchs/bench_random1m.cpp)
 target_link_libraries (bench_random1m vsag)
 
 add_subdirectory (extern/Catch2)
-add_executable (tests tests/test_hnsw.cpp tests/test_json.cpp)
+add_executable (tests tests/test_hnsw.cpp tests/test_json.cpp tests/test_kmeans.cpp)
 target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag)
