--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,8 @@ add_subdirectory (extern/Catch2)
 add_executable (tests tests/test_hnsw.cpp tests/test_json.cpp tests/test_kmeans.cpp tests/test_log.cpp)
 target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag)
 
-set(CMAKE_SHARED_LINKER_FLAGS "-Wl,-flat_namespace,-undefined,suppress")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 add_subdirectory(extern/pybind11)
-add_executable(example python/binding.cpp)
-target_link_libraries(example PRIVATE pybind11::module)
+add_library(pyVsag SHARED python/binding.cpp)
+target_link_libraries(pyVsag PRIVATE pybind11::module vsag)
 
