modify Cxx compilier

--- a/.aci.yml
+++ b/.aci.yml
@@ -27,6 +27,8 @@ vsag_build_ut:
         command:
         - |
           echo "running unittests..."
+          export CC=/usr/bin/gcc
+          export CXX=/usr/bin/g++
           make test
   timeout: 60
   allowFailure: false
