--- a/.aci.yml
+++ b/.aci.yml
@@ -28,6 +28,8 @@ vsag_build_ut:
         - |
           echo "running unittests..."
           sh build_dependency.sh
+          export CC=/usr/bin/gcc
+          export CXX=/usr/bin/g++
           make test
   timeout: 60
   allowFailure: false
