export vamana python interface

--- a/extern/DiskANN/src/CMakeLists.txt
+++ b/extern/DiskANN/src/CMakeLists.txt
@@ -17,7 +17,8 @@ else()
     if (RESTAPI)
         list(APPEND CPP_SOURCES restapi/search_wrapper.cpp restapi/server.cpp)
     endif()
-    add_library(${PROJECT_NAME} ${CPP_SOURCES})
+    add_library(${PROJECT_NAME} SHARED ${CPP_SOURCES})
+    target_link_libraries(${PROJECT_NAME} aio)
     add_library(${PROJECT_NAME}_s STATIC ${CPP_SOURCES})
 endif()
 
