--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,17 @@ include_directories(extern/json/single_include)
 include_directories(extern/faiss)
 include_directories(extern/spdlog/include)
 include_directories(include)
+include_directories(extern/DiskANN/include)
 
-# include_directories(extern/DiskANN/include)
+
+link_directories(/opt/intel/lib/intel64_lin/)
+link_directories(/opt/intel/mkl/lib/intel64/)
 add_subdirectory(extern/DiskANN)
 
 file (GLOB CPP_SRCS "src/*.cpp")
 add_library (vsag SHARED ${CPP_SRCS})
+
+target_link_libraries (vsag diskann)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Ofast")
 
@@ -40,21 +45,14 @@ target_link_libraries (example_hnsw vsag)
 add_executable (example_kmeans examples/cpp/example_kmeans.cpp)
 target_link_libraries (example_kmeans vsag)
 
-link_directories(
-    ${root}/third-party/install/lib
-    ${root}/third-party/install/lib64)
-link_directories(/opt/intel/lib/intel64_lin/)
-link_directories(/opt/intel/mkl/lib/intel64/)
-
 
 add_executable (example_diskann examples/cpp/example_diskann.cpp)
-target_include_directories(example_diskann PRIVATE extern/DiskANN/include)
-target_link_libraries (example_diskann diskann vsag)
+target_link_libraries (example_diskann vsag)
 
 add_subdirectory (extern/Catch2)
 add_executable (tests tests/test_hnsw.cpp tests/test_json.cpp tests/test_kmeans.cpp tests/test_log.cpp tests/test_diskann.cpp)
 target_include_directories(tests PRIVATE extern/DiskANN/include)
-target_link_libraries (tests PRIVATE Catch2::Catch2WithMain diskann vsag)
+target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag)
 
 #find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 #add_subdirectory(extern/pybind11)
