--- a/extern/DiskANN/CMakeLists.txt
+++ b/extern/DiskANN/CMakeLists.txt
@@ -182,7 +182,7 @@ else()
 
     # compile flags and link libraries
     add_compile_options(-m64 -Wl,--no-as-needed)
-    if (NOT PYBIND)
+    if (PYBIND)
         link_libraries(mkl_intel_ilp64 mkl_intel_thread mkl_core iomp5 pthread m dl)
     else()
         # static linking for python so as to minimize customer dependency issues
@@ -283,7 +283,7 @@ else()
     set(ENV{TCMALLOC_LARGE_ALLOC_REPORT_THRESHOLD} 500000000000)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma -msse2 -ftree-vectorize -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -fopenmp -fopenmp-simd -funroll-loops -Wfatal-errors -DUSE_AVX2")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -DDEBUG")
-    if (NOT PYBIND)
+    if (PYBIND)
         set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -Ofast")
         if (NOT PORTABLE)
             set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -mtune=native")
@@ -295,10 +295,10 @@ else()
 endif()
 
 add_subdirectory(src)
-if (NOT PYBIND)
-    add_subdirectory(apps)
-    add_subdirectory(apps/utils)
-endif()
+#if (NOT PYBIND)
+#    add_subdirectory(apps)
+#    add_subdirectory(apps/utils)
+#endif()
 
 if (UNIT_TEST)
     enable_testing()
