PullRequest: 8 enable ci when creating pull request
Merge branch update_aci_config of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/8
* enable ci when creating pull request

--- a/.aci.yml
+++ b/.aci.yml
@@ -3,10 +3,12 @@ version: "1.5"
 only:
   triggerType:
     - push
+    - pullRequest
   triggerBranch:
+    prTargetBranch:
+      - ^master$
     pushOriginalBranch:
       - ^master$
-      - ^feature_diskann$
 
 parameters:
   image: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605
