PullRequest: 14 update index parameters structure
Merge branch update_index_params_structure of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/14
* update index parameters structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ if (ENABLE_TESTS)
 	tests/test_hnsw.cpp
 	tests/test_diskann.cpp
 	tests/test_kmeans.cpp
+	tests/test_factory.cpp
     )
     target_include_directories(tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
     target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag)
