PullRequest: 24 modify mock
Merge branch modify_mock of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/24

Signed-off-by: 祥予 <wxy407827@antgroup.com>


* modify mock

* split binary

* format code

* format code

--- a/mockimpl/CMakeLists.txt
+++ b/mockimpl/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library (vsag_mockimpl SHARED simpleflat.cpp)
+add_library (vsag_mockimpl SHARED vsag/simpleflat.cpp vsag/factory.cpp)
 
 add_executable (example_simpleflat example_simpleflat.cpp)
 target_link_libraries (example_simpleflat vsag_mockimpl)
