PullRequest: 31 mock interface
Merge branch mock_interface of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/31

Signed-off-by: 祥予 <wxy407827@antgroup.com>


* implement mock interface

* implement mock interface

* implement mock interface

* modify the implement of mock interface

* fix bug for diskann

* fix bug for diskann

* fix bug in test_diskann

--- a/mockimpl/CMakeLists.txt
+++ b/mockimpl/CMakeLists.txt
@@ -1,8 +1,11 @@
 
 add_library (vsag_mockimpl SHARED vsag/simpleflat.cpp vsag/factory.cpp)
 
-add_executable (example_simpleflat example_simpleflat.cpp)
-target_link_libraries (example_simpleflat vsag_mockimpl)
+add_executable (example_diskann_mockimpl ../examples/cpp/example_diskann.cpp)
+target_link_libraries (example_diskann_mockimpl vsag_mockimpl)
+
+add_executable (example_hnsw_mockimpl ../examples/cpp/example_hnsw.cpp)
+target_link_libraries (example_hnsw_mockimpl vsag_mockimpl)
 
 install(TARGETS vsag_mockimpl
 	LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
