PullRequest: 36 enable unit testing in aci
Merge branch enable_test_in_aci of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/36

Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* enable unit testing in aci

--- a/.aci.yml
+++ b/.aci.yml
@@ -40,7 +40,7 @@ vsag_build_ut:
           export CC=/usr/bin/gcc
           export CXX=/usr/bin/g++
           export PATH=/usr/lib/ccache:$PATH
-          make debug
+          make test
           # upload ccache
           cd $HOME/ && tar -czf ccache.tar.gz .ccache
           osscmd put ./ccache.tar.gz oss://tbase/vsag/ccache.tar.gz
