--- a/.aci.yml
+++ b/.aci.yml
@@ -19,8 +19,8 @@ stages:
 vsag_build_ut:
   stage: BUILD_UT
   agent:
-    resourceClass: S #2C4G
-    #resourceClass: M #4C8G
+    #resourceClass: S #2C4G
+    resourceClass: M #4C8G
     #resourceClass: L #8C16G
   steps:
     - plugin: clone
@@ -43,6 +43,6 @@ vsag_build_ut:
           make test
           # upload ccache
           cd $HOME/ && tar -czf ccache.tar.gz .ccache
-          osscmd put ./ccache.tar.gz oss://tbase/vsag/ccache.tar.gz
+          osscmd put ./ccache.tar.gz oss://tbase/vsag/ccache.tar.gz  > /dev/null 2>&1
   timeout: 60
   allowFailure: false
