PullRequest: 40 enable format checking in aci
Merge branch enable_format_checking_in_aci of git@gitlab.alipay-inc.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/40

Signed-off-by: 凌厓 <zhenghaonan.zhn@antgroup.com>


* enable format checking in aci

* update

--- a/.aci.yml
+++ b/.aci.yml
@@ -11,10 +11,26 @@ only:
       - ^master$
 
 parameters:
-  image: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605
+  image: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-clang13
       
 stages:
+  - FORMAT-PRE-CHECK
   - BUILD_UT
+
+format-pre-check:
+  stage: FORMAT-PRE-CHECK
+  aciTags: DOCKER
+  steps:
+    - plugin: clone
+    - plugin: shell
+      inputs:
+        image: ${image}
+        command:
+        - |
+          make format
+          if [[ -n $(git status --porcelain) ]]; then
+              exit 1
+          fi
   
 vsag_build_ut:
   stage: BUILD_UT
