PullRequest: 54 support to get library version at runtime
Merge branch 'add_version_method of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/54


Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* support to get library version at runtime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,3 +87,12 @@ install(DIRECTORY include/
 	DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 install(TARGETS vsag
 	LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+
+find_package (Git)
+add_custom_target (version
+  ${CMAKE_COMMAND} -D SRC=${CMAKE_SOURCE_DIR}/src/version.h.in
+                   -D DST=${CMAKE_SOURCE_DIR}/src/version.h
+                   -D GIT_EXECUTABLE=${GIT_EXECUTABLE}
+                   -P ${CMAKE_SOURCE_DIR}/cmake/GenerateVersionHeader.cmake
+  )
+add_dependencies (vsag version)
