PullRequest: 58 add test for mock
Merge branch 'add-test-for-mock of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/58


Signed-off-by: 祥予 <wxy407827@antgroup.com>


* add ut for mock

* add ut for mock

* add ut for mock

* add ut for mock

--- a/mockimpl/CMakeLists.txt
+++ b/mockimpl/CMakeLists.txt
@@ -18,3 +18,13 @@ add_custom_target (version_mockimpl
                    -P ${CMAKE_SOURCE_DIR}/cmake/GenerateVersionHeader.cmake
   )
 add_dependencies (vsag_mockimpl version_mockimpl)
+
+if (ENABLE_TESTS)
+    add_executable (tests_mockimpl
+            ../tests/test_hnsw.cpp
+            ../tests/test_factory.cpp
+    )
+    target_include_directories(tests_mockimpl PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
+    target_link_libraries (tests_mockimpl PRIVATE Catch2::Catch2WithMain vsag_mockimpl)
+    add_dependencies(tests_mockimpl spdlog Catch2)
+endif ()
