--- a/.aci.yml
+++ b/.aci.yml
@@ -39,24 +39,32 @@ vsag_build_ut:
     resourceClass: M #4C8G
     #resourceClass: L #8C16G
   steps:
-    - plugin: clone
+    #- plugin: clone
     - plugin: shell
       inputs:
         image: ${image}
         command:
         - |
+          echo "clone source codes..."
+          git clone -b master http://ice_test:${ACI_VAR_ICE_CODE_PASSWORD}@gitlab.alipay-inc.com/octopus/vsag.git
+          cd vsag
+          git fetch --tags
+          #
           echo "running unittests..."
           sh ./scripts/deps/install_deps_centos.sh
+          #
           # download ccache
           osscmd config --host=${OSS_HOST} --id=${OSS_ACCESS_KEY_ID} --key=${OSS_ACCESS_KEY_SECRET}
           osscmd get oss://tbase/vsag/ccache.tar.gz ./ccache.tar.gz
           mkdir $HOME/.ccache
           tar -xzf ./ccache.tar.gz -C $HOME
+          #
           # compile
           export CC=/usr/bin/gcc
           export CXX=/usr/bin/g++
           export PATH=/usr/lib/ccache:$PATH
           make test
+          #
           # upload ccache
           cd $HOME/ && tar -czf ccache.tar.gz .ccache
           osscmd put ./ccache.tar.gz oss://tbase/vsag/ccache.tar.gz  > /dev/null 2>&1
