PullRequest: 76 fix occasional compilation failure caused by missing dependencies
Merge branch fix_compilation_failure of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/76

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* fix occasional compilation failure caused by missing dependencies

--- a/.aci.yml
+++ b/.aci.yml
@@ -39,15 +39,16 @@ vsag_build_ut:
     resourceClass: M #4C8G
     #resourceClass: L #8C16G
   steps:
-    #- plugin: clone
+    # - plugin: clone
     - plugin: shell
       inputs:
         image: ${image}
         command:
         - |
           echo "clone source codes..."
-          git clone -b master http://ice_test:${ACI_VAR_ICE_CODE_PASSWORD}@gitlab.alipay-inc.com/octopus/vsag.git
+          git clone http://ice_test:${ACI_VAR_ICE_CODE_PASSWORD}@gitlab.alipay-inc.com/octopus/vsag.git
           cd vsag
+          git checkout -b ${ACI_COMMIT_REF_NAME} origin/${ACI_COMMIT_REF_NAME}
           git fetch --tags
           #
           echo "running unittests..."
