PullRequest: 78 fix compilation failure on master branch
Merge branch 'fix_aci_compilation_failure_on_master_branch of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/78


Signed-off-by: 凌厓 <zhenghaonan.zhn@antgroup.com>
Signed-off-by: 贾玮 <jw94525@antgroup.com>


* fix compilation failure on master branch

--- a/.aci.yml
+++ b/.aci.yml
@@ -48,7 +48,7 @@ vsag_build_ut:
           echo "clone source codes..."
           git clone http://ice_test:${ACI_VAR_ICE_CODE_PASSWORD}@gitlab.alipay-inc.com/octopus/vsag.git
           cd vsag
-          git checkout -b ${ACI_COMMIT_REF_NAME} origin/${ACI_COMMIT_REF_NAME}
+          git checkout ${ACI_COMMIT_REF_NAME}
           git fetch --tags
           #
           echo "running unittests..."
