PullRequest: 82 fix-bug-in-diskann
Merge branch fix-bug-in-diskann of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/82

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* fix bug in diskann

* fix bug in diskann

* fix bug in diskann

* fix error

* rm note

* modify test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,8 @@ if (ENABLE_TESTS)
 	tests/test_kmeans.cpp
 	tests/test_factory.cpp
 	tests/test_utils.cpp
-	tests/test_bitset.cpp
+    tests/test_bitset.cpp
+    tests/test_random_index.cpp
     )
     target_include_directories(tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/spdlog/install/include)
     target_link_libraries (tests PRIVATE Catch2::Catch2WithMain vsag)
