--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,58 @@ project (VSAG
   LANGUAGES CXX
 )
 
-find_program(CCACHE_PROGRAM ccache)
-if(CCACHE_PROGRAM)
-    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
-    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
-endif()
+
 set(NUM_BUILDING_JOBS 4)
 
 set(CMAKE_CXX_STANDARD 17)
+
+option(ENABLE_JEMALLOC "Whether to link jemalloc to all executables" OFF)
+option(ENABLE_ASAN "Whether to turn AddressSanitizer ON or OFF" OFF)
+option(ENABLE_COVERAGE "Whether to turn unit test coverage ON or OFF" OFF)
+option(ENABLE_FUZZ_TEST "Whether to turn Fuzz Test ON or OFF" OFF)
+option(ENABLE_WERROR "Whether to error on warnings" ON)
+option(ENABLE_TSAN "Whether to turn Thread Sanitizer ON or OFF" OFF)
+option(ENABLE_FRAME_POINTER "Whether to build with -fno-omit-frame-pointer" ON)
+option(ENABLE_THIN_LTO "Whether to build with thin lto -flto=thin" OFF)
+
+option(ENABLE_CCACHE "Whether to open ccache" OFF)
+find_program(CCACHE_FOUND ccache)
+if(CCACHE_FOUND AND ENABLE_CCACHE)
+ message(STATUS "Compiling with ccache")
+ set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+ set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+endif()
+
+option(ENABLE_COVERAGE "Enable gcov (debug, Linux builds only)" OFF)
+if (ENABLE_COVERAGE AND NOT WIN32 AND NOT APPLE)
+  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} --coverage -DCOVERAGE_TEST_USE_GCOV")
+  SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} --coverage -DCOVERAGE_TEST_USE_GCOV")
+ENDIF()
+
+if (ENABLE_ASAN)
+  if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0))
+    message(STATUS "Compiling with AddressSanitizer and UndefinedBehaviorSanitizer")
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address,undefined -fno-omit-frame-pointer -fno-optimize-sibling-calls -fsanitize-recover=address -fno-sanitize=vptr")
+    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address,undefined -fno-omit-frame-pointer -fno-optimize-sibling-calls -fsanitize-recover=address -fno-sanitize=vptr")
+    SET (CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -g -fsanitize=address,undefined -fno-omit-frame-pointer -fno-optimize-sibling-calls -fsanitize-recover=address -fno-sanitize=vptr")
+  else()
+    message(STATUS "Compiling with AddressSanitizer")
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address -fno-omit-frame-pointer -static-libasan")
+    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address -fno-omit-frame-pointer -static-libasan")
+    SET (CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -g -fsanitize=address -fno-omit-frame-pointer -static-libasan")
+  endif()
+endif()
+
+if (ENABLE_TSAN)
+    if (ENABLE_ASAN)
+        MESSAGE(FATAL_ERROR "ENABLE_TSAN cannot be combined with ENABLE_ASAN")
+    endif()
+    set(CMAKE_REQUIRED_FLAGS "-fsanitize=thread")
+    set(ENV{TSAN_OPTIONS} "report_atomic_races=0")
+    add_compile_options(-fsanitize=thread)
+    add_compile_options(-g)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
+endif()
 
 include(ExternalProject)
 include(extern/boost/boost.cmake)
