PullRequest: 98 add ci pipeline asan result judgment
Merge branch 'ci_upgrade of git@code.alipay.com:octopus/vsag.git into master

https://code.alipay.com/octopus/vsag/pull_requests/98


Signed-off-by: 祥予 <wxy407827@antgroup.com>
Signed-off-by: 余羡 <jinjiabao.jjb@antgroup.com>


* add ci pipeline asan result judgment

* add ci pipeline asan result judgment

--- a/.aci.yml
+++ b/.aci.yml
@@ -100,5 +100,12 @@ vsag_build_asan_ut:
           export PATH=/usr/lib/ccache:$PATH
           make test_asan
           #
+    - plugin: memcheck-log-parser
+      inputs:
+        tools: "asan ubsan"
+        log_file_path: "testresult/"
+        upload: "true"
+      outputs:
+        - memory_check_error
   timeout: 60
   allowFailure: false
