PullRequest: 96 replace the string with a constant and normalize the parameters
Merge branch rename-parameter of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/96

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 尘微 <cw281808@antgroup.com>


* replace the string with a constant and normalize the parameters

* replace the string with a constant and normalize the parameters

* replace the string with a constant and normalize the parameters

* modify index

* modify index

* modify index

* add message

* add message

* add message

* add message

* add message

* add message

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 *.out
 *.log
 *.app
+*.pyc
 
 CMakeLists.txt.user
 CMakeCache.txt
@@ -54,5 +55,6 @@ third-party/build/
 third-party/downloads/
 third-party/install/
 dist/
+data/
 /src/version.h
 /mockimpl/vsag/version.h
