PullRequest: 97 ceate a docker environment that meets the requirements of VSAG compilation
Merge branch create_docker of git@code.alipay.com:octopus/vsag.git into master
https://code.alipay.com/octopus/vsag/pull_requests/97

Signed-off-by: 贾玮 <jw94525@antgroup.com>
Signed-off-by: 祥予 <wxy407827@antgroup.com>


* fix asan env

* fix asan env

* add docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify docker

* modify Makefile

* modify docker

* modify aci.yml

* modify .aci.yml

* modify .aci.yml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,7 @@ if (ENABLE_TESTS)
 endif ()
 
 if (ENABLE_PYBINDS)
-#    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
     add_subdirectory(extern/pybind11)
     pybind11_add_module(pyvsag python_bindings/binding.cpp)
     target_link_libraries(pyvsag PRIVATE pybind11::module vsag)
