--- a/.aci.yml
+++ b/.aci.yml
@@ -13,6 +13,7 @@ only:
 parameters:
   image: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-clang13
   image_gcc: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-gcc10
+  image_vsag: reg.docker.alibaba-inc.com/tbase/tbase:dev-20230605-vsag
 
 stages:
   - FORMAT-PRE-CHECK
@@ -43,7 +44,7 @@ vsag_build_ut_cov:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image}
+        image: ${image_vsag}
         command:
         - |
           echo "clone source codes..."
@@ -53,15 +54,12 @@ vsag_build_ut_cov:
           git fetch --tags
           #
           echo "running unittests..."
-          sh ./scripts/deps/install_deps_centos.sh
           osscmd config --host=${OSS_HOST} --id=${OSS_ACCESS_KEY_ID} --key=${OSS_ACCESS_KEY_SECRET}
           #
           # download ccache
           bash scripts/misc/ccache.sh
           #
           # compile
-          export CC=/usr/bin/gcc
-          export CXX=/usr/bin/g++
           export PATH=/usr/lib/ccache:$PATH
           make test_cov
           #
@@ -78,7 +76,7 @@ vsag_build_asan_ut:
     # - plugin: clone
     - plugin: shell
       inputs:
-        image: ${image_gcc}
+        image: ${image_vsag}
         command:
         - |
           echo "clone source codes..."
@@ -88,15 +86,12 @@ vsag_build_asan_ut:
           git fetch --tags
           #
           echo "running unittests..."
-          sh ./scripts/deps/install_deps_centos.sh
           osscmd config --host=${OSS_HOST} --id=${OSS_ACCESS_KEY_ID} --key=${OSS_ACCESS_KEY_SECRET}
           #
           # download ccache
           bash scripts/misc/ccache.sh
           #
           # compile
-          export CC=/usr/bin/gcc
-          export CXX=/usr/bin/g++
           export PATH=/usr/lib/ccache:$PATH
           make test_asan
           #
